# color-quant

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  appveyor.yml
js/: LICENSE  README.md  index.js  package-lock.json  package.json
script/: index.js  package-lock.json  package.json
src/: CMakeLists.txt  colorquant.c  colorquant.cpp  colorquant.h  pix.c  pix.cpp  pix.h  vbox.c  vbox.cpp  vbox.h
test/: CMakeLists.txt  main.c  main.cpp
